--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 16:05:02 2018</p>
+         Last Run: Sat Nov 24 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -37,8 +37,8 @@
                         <td>63</td>
                         <td>1</td>
                         <td>6</td>
-                        <td>WSW</td>
-                        <td>18</td>
+                        <td>SW</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -49,8 +49,8 @@
                         <td>62</td>
                         <td>1</td>
                         <td>6</td>
-                        <td>SW</td>
-                        <td>16</td>
+                        <td>SSW</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>2</td>
-                        <td>62</td>
+                        <td>61</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SSW</td>
-                        <td>10</td>
+                        <td>S</td>
+                        <td>14</td>
                      </tr>
                   </tbody>
                </table>
@@ -173,7 +173,7 @@
                "data":[
                  "63",
                  "62",
-                 "62"
+                 "61"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "18",
-                 "16",
-                 "10"
+                 "19",
+                 "20",
+                 "14"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 16:05:02 2018</p>
+         Last Run: Sat Nov 24 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -245,15 +245,15 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Overcast</td>
-                        <td>0</td>
-                        <td>-3</td>
+                        <td>Mostly Cloudy</td>
+                        <td>1</td>
+                        <td>-2</td>
                         <td>5</td>
-                        <td>79</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>85</td>
+                        <td>78</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -261,23 +261,23 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>5</td>
-                        <td>77</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>87</td>
+                        <td>80</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>5</td>
-                        <td>80</td>
+                        <td>4</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>86</td>
+                        <td>81</td>
                      </tr>
                   </tbody>
                </table>
@@ -304,7 +304,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-3",
+                 "-2",
                  "-3",
                  "-3"
                ]
@@ -316,7 +316,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "0",
+                 "1",
                  "0",
                  "0"
                ]
@@ -377,7 +377,7 @@
                "data":[
                  "5",
                  "5",
-                 "5"
+                 "4"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "79",
                  "77",
-                 "80"
+                 "78",
+                 "78"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "85",
-                 "87",
-                 "86"
+                 "78",
+                 "80",
+                 "81"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 16:05:02 2018</p>
+         Last Run: Sat Nov 24 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -460,39 +460,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>8</td>
-                        <td>93</td>
+                        <td>7</td>
+                        <td>89</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>48</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-5</td>
                         <td>-8</td>
-                        <td>8</td>
-                        <td>94</td>
+                        <td>7</td>
+                        <td>90</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>46</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-6</td>
-                        <td>-10</td>
-                        <td>6</td>
-                        <td>97</td>
+                        <td>Clear</td>
+                        <td>-5</td>
+                        <td>-9</td>
+                        <td>5</td>
+                        <td>92</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>43</td>
+                        <td>13</td>
                      </tr>
                   </tbody>
                </table>
@@ -521,7 +521,7 @@
                "data":[
                  "-7",
                  "-8",
-                 "-10"
+                 "-9"
                ]
              },
              {
@@ -533,7 +533,7 @@
                "data":[
                  "-4",
                  "-5",
-                 "-6"
+                 "-5"
                ]
              }
            ]
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "8",
-                 "8",
-                 "6"
+                 "7",
+                 "7",
+                 "5"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "93",
-                 "94",
-                 "97"
+                 "89",
+                 "90",
+                 "92"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "48",
-                 "46",
-                 "43"
+                 "12",
+                 "13",
+                 "13"
                ]
              }
            ]
