--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 17:05:02 2018</p>
+         Last Run: Sat Nov 24 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>-1</td>
                         <td>-3</td>
                         <td>2</td>
-                        <td>63</td>
+                        <td>64</td>
                         <td>1</td>
                         <td>6</td>
                         <td>SW</td>
@@ -46,7 +46,7 @@
                         <td>0</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>62</td>
+                        <td>63</td>
                         <td>1</td>
                         <td>6</td>
                         <td>SSW</td>
@@ -61,7 +61,7 @@
                         <td>61</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>S</td>
+                        <td>SSW</td>
                         <td>14</td>
                      </tr>
                   </tbody>
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "64",
                  "63",
-                 "62",
                  "61"
                ]
              },
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 17:05:02 2018</p>
+         Last Run: Sat Nov 24 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -246,14 +246,14 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>1</td>
-                        <td>-2</td>
+                        <td>0</td>
+                        <td>-3</td>
                         <td>5</td>
-                        <td>77</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>78</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -272,8 +272,8 @@
                         <td>Overcast</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>4</td>
-                        <td>78</td>
+                        <td>5</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
@@ -304,7 +304,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
+                 "-3",
                  "-3",
                  "-3"
                ]
@@ -316,7 +316,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "1",
+                 "0",
                  "0",
                  "0"
                ]
@@ -377,7 +377,7 @@
                "data":[
                  "5",
                  "5",
-                 "4"
+                 "5"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "77",
+                 "79",
                  "78",
-                 "78"
+                 "80"
                ]
              },
              {
@@ -397,7 +397,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "78",
+                 "79",
                  "80",
                  "81"
                ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 17:05:02 2018</p>
+         Last Run: Sat Nov 24 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,24 +463,24 @@
                         <td>Clear</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>7</td>
-                        <td>89</td>
+                        <td>5</td>
+                        <td>88</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>WSW</td>
-                        <td>12</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-5</td>
-                        <td>-8</td>
-                        <td>7</td>
-                        <td>90</td>
+                        <td>-9</td>
+                        <td>5</td>
+                        <td>89</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>WSW</td>
-                        <td>13</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -492,7 +492,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>13</td>
+                        <td>11</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-7",
-                 "-8",
+                 "-9",
                  "-9"
                ]
              },
@@ -590,8 +590,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "7",
-                 "7",
+                 "5",
+                 "5",
                  "5"
                ]
              },
@@ -601,8 +601,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "88",
                  "89",
-                 "90",
                  "92"
                ]
              },
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "12",
-                 "13",
-                 "13"
+                 "10",
+                 "11",
+                 "11"
                ]
              }
            ]
